Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectTextObjField.quorum
class Main
    Object v = Test()
    action Main
        Text var = cast(Text, v)
        if var:GetValue() = "text"
            output "passed"
        end
    end

    action Test() returns Object
        Text var
        var:SetValue("text")
        return var
    end
end