Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberTextObj.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        Text var
        var:SetValue("text")
        return var
    end
end